FindaVenue/force-app/main/default/objects/Lead/fields/Additional_Text__c.field-meta.xml
<CustomField>
    <fullName>Additional_Text__c</fullName>
    <label>Additional Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>