FindaVenue/force-app/main/default/objects/Lead/fields/Agreed_Rates__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Rates__c</fullName>
    <label>Agreed Rates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>