FindaVenue/force-app/main/default/objects/Lead/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>Commission_Inc_VAT__c -   Total_Invoice_Gross__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commission Inc VAT - Total Invoice Gross</inlineHelpText>
    <label>Balance Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>