FindaVenue/force-app/main/default/objects/Lead/fields/Cannot_help_you_Email__c.field-meta.xml
<CustomField>
    <fullName>Cannot_help_you_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cannot help you Email</label>
    <type>Checkbox</type>
</CustomField>