FindaVenue/force-app/main/default/objects/Lead/fields/Client_Potential__c.field-meta.xml
<CustomField>
    <fullName>Client_Potential__c</fullName>
    <label>Client/Potential</label>
    <length>150</length>
    <type>Text</type>
</CustomField>