FindaVenue/force-app/main/default/objects/Lead/fields/Commission_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Commission_Inc_VAT__c</fullName>
    <formula>Commission_Total__c +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>