FindaVenue/force-app/main/default/objects/Lead/fields/Commission_Total__c.field-meta.xml
<CustomField>
    <fullName>Commission_Total__c</fullName>
    <formula>IF(
    ISPICKVAL(Revenue_Type__c, &quot;Commission&quot;),
    Commission_Rate__c * Net_spend_total__c,
    IF(
        ISPICKVAL(Revenue_Type__c, &quot;Flat Rate&quot;),
 Flat_Rate__c         ,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>