FindaVenue/force-app/main/default/objects/Lead/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>