FindaVenue/force-app/main/default/objects/Lead/fields/Company_or_Private__c.field-meta.xml
<CustomField>
    <fullName>Company_or_Private__c</fullName>
    <label>Company or Private</label>
    <length>100</length>
    <type>Text</type>
</CustomField>