FindaVenue/force-app/main/default/objects/Lead/fields/Customer_additional_venues_proposal_info__c.field-meta.xml
<CustomField>
    <fullName>Customer_additional_venues_proposal_info__c</fullName>
    <label>Customer additional venues proposal info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>