FindaVenue/force-app/main/default/objects/Lead/fields/Date_Enquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Enquired__c</fullName>
    <label>Date Enquired</label>
    <type>Date</type>
</CustomField>