FindaVenue/force-app/main/default/objects/Lead/fields/Deposit_Information__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Information__c</fullName>
    <label>Deposit Information</label>
    <type>TextArea</type>
</CustomField>