FindaVenue/force-app/main/default/objects/Lead/fields/Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Status__c</fullName>
    <label>Deposit Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>