FindaVenue/force-app/main/default/objects/Lead/fields/Deposit_Venue_Requests__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Venue_Requests__c</fullName>
    <label>Deposit Venue Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>