FindaVenue/force-app/main/default/objects/Lead/fields/Do_not_Follow_Up_2__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Follow_Up_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Follow Up 2</label>
    <type>Checkbox</type>
</CustomField>