FindaVenue/force-app/main/default/objects/Lead/fields/Do_not_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Follow up</label>
    <type>Checkbox</type>
</CustomField>