FindaVenue/force-app/main/default/objects/Lead/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <label>Email 2</label>
    <type>TextArea</type>
</CustomField>