FindaVenue/force-app/main/default/objects/Lead/fields/Entertainment_Types__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Types__c</fullName>
    <description>Entertainment Types</description>
    <label>Entertainment Types</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>