FindaVenue/force-app/main/default/objects/Lead/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>