FindaVenue/force-app/main/default/objects/Lead/fields/EventRecordType__c.field-meta.xml
<CustomField>
    <fullName>EventRecordType__c</fullName>
    <formula>IF( RecordTypeId = &apos;01209000000MxBW&apos;, &apos;01209000000MxBR&apos;, &apos;01209000000MxBS&apos;)</formula>
    <label>EventRecordType</label>
    <type>Text</type>
</CustomField>