FindaVenue/force-app/main/default/objects/Lead/fields/Events_Day_Month__c.field-meta.xml
<CustomField>
    <fullName>Events_Day_Month__c</fullName>
    <label>Events Day Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>