FindaVenue/force-app/main/default/objects/Lead/fields/Events_Email__c.field-meta.xml
<CustomField>
    <fullName>Events_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Events Email</label>
    <type>Checkbox</type>
</CustomField>