FindaVenue/force-app/main/default/objects/Lead/fields/Extra_Info__c.field-meta.xml
<CustomField>
    <fullName>Extra_Info__c</fullName>
    <label>Extra Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>