FindaVenue/force-app/main/default/objects/Lead/fields/Follow_Up_2__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up 2</label>
    <type>Checkbox</type>
</CustomField>