FindaVenue/force-app/main/default/objects/Lead/fields/Follow_up_in_months__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_in_months__c</fullName>
    <label>Follow up in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>