FindaVenue/force-app/main/default/objects/Lead/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <length>255</length>
    <type>Text</type>
</CustomField>