FindaVenue/force-app/main/default/objects/Lead/fields/Food_Drink_Budget__c.field-meta.xml
<CustomField>
    <fullName>Food_Drink_Budget__c</fullName>
    <label>Food / Drink Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>