FindaVenue/force-app/main/default/objects/Lead/fields/How_they_paid__c.field-meta.xml
<CustomField>
    <fullName>How_they_paid__c</fullName>
    <label>How they paid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>