FindaVenue/force-app/main/default/objects/Lead/fields/Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Id__c</fullName>
    <label>Internal Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>