FindaVenue/force-app/main/default/objects/Lead/fields/Location_Requested__c.field-meta.xml
<CustomField>
    <fullName>Location_Requested__c</fullName>
    <label>Location Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_Requested</valueSetName>
    </valueSet>
</CustomField>