FindaVenue/force-app/main/default/objects/Lead/fields/Location_Required__c.field-meta.xml
<CustomField>
    <fullName>Location_Required__c</fullName>
    <label>Location Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>