FindaVenue/force-app/main/default/objects/Lead/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <formula>If(FirstName!= null,
FirstName,
LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name2</label>
    <type>Text</type>
</CustomField>