FindaVenue/force-app/main/default/objects/Lead/fields/Name3__c.field-meta.xml
<CustomField>
    <fullName>Name3__c</fullName>
    <label>Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>