FindaVenue/force-app/main/default/objects/Lead/fields/Net_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin__c</fullName>
    <formula>Total_Invoice_Net__c - Total_Bill_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice Total - Bills Total (Net of VAT)</inlineHelpText>
    <label>Net Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>