FindaVenue/force-app/main/default/objects/Lead/fields/Net_spend_total__c.field-meta.xml
<CustomField>
    <fullName>Net_spend_total__c</fullName>
    <label>Net Spend total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>