FindaVenue/force-app/main/default/objects/Lead/fields/No_Welcome_email__c.field-meta.xml
<CustomField>
    <fullName>No_Welcome_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Welcome email</label>
    <type>Checkbox</type>
</CustomField>