FindaVenue/force-app/main/default/objects/Lead/fields/Number_Of_People__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_People__c</fullName>
    <label>Number Of People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>