FindaVenue/force-app/main/default/objects/Lead/fields/Party_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Party_Start_Time__c</fullName>
    <label>Party Start Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>