FindaVenue/force-app/main/default/objects/Lead/fields/Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Description__c</fullName>
    <label>Payment Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>