FindaVenue/force-app/main/default/objects/Lead/fields/recordtypeIDTExt__c.field-meta.xml
<CustomField>
    <fullName>recordtypeIDTExt__c</fullName>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordtypeIDTExt</label>
    <type>Text</type>
</CustomField>