FindaVenue/force-app/main/default/objects/Lead/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <displayFormat>R-{00000}</displayFormat>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>