FindaVenue/force-app/main/default/objects/Lead/fields/Room_layout__c.field-meta.xml
<CustomField>
    <fullName>Room_layout__c</fullName>
    <label>Room layout</label>
    <length>100</length>
    <type>Text</type>
</CustomField>