FindaVenue/force-app/main/default/objects/Lead/fields/SendProposal__c.field-meta.xml
<CustomField>
    <fullName>SendProposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendProposal</label>
    <type>Checkbox</type>
</CustomField>