FindaVenue/force-app/main/default/objects/Lead/fields/Skip_or_Error__c.field-meta.xml
<CustomField>
    <fullName>Skip_or_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip or Error</label>
    <type>Checkbox</type>
</CustomField>