FindaVenue/force-app/main/default/objects/Lead/fields/system_activity_comment__c.field-meta.xml
<CustomField>
    <fullName>system_activity_comment__c</fullName>
    <label>system activity comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>