FindaVenue/force-app/main/default/objects/Lead/fields/Test_Only__c.field-meta.xml
<CustomField>
    <fullName>Test_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Only</label>
    <type>Checkbox</type>
</CustomField>