FindaVenue/force-app/main/default/objects/Lead/fields/Total_Bill_Gross__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Gross__c</fullName>
    <inlineHelpText>Sum of all Bills (Gross Amount)</inlineHelpText>
    <label>Total Bill Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>