FindaVenue/force-app/main/default/objects/Lead/fields/Total_Bill_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Net__c</fullName>
    <inlineHelpText>Sum of all Bills (Net Amount)</inlineHelpText>
    <label>Total Bill Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>