FindaVenue/force-app/main/default/objects/Lead/fields/Total_Invoice_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Net__c</fullName>
    <inlineHelpText>Sum of all Invoices (Net Amount)</inlineHelpText>
    <label>Total Invoice Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>