FindaVenue/force-app/main/default/objects/Lead/fields/TotalInvoiceVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceVAT__c</fullName>
    <inlineHelpText>Sum of all Invoices (VAT Amount)</inlineHelpText>
    <label>Total Invoice VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>