FindaVenue/force-app/main/default/objects/Lead/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/a</fullName>
            </value>
            <value>
                <fullName>21st Party</fullName>
            </value>
            <value>
                <fullName>Top Venues with areas cordoned off</fullName>
            </value>
            <value>
                <fullName>College Ball Hotels</fullName>
            </value>
            <value>
                <fullName>College Events</fullName>
            </value>
            <value>
                <fullName>Decision sent</fullName>
            </value>
            <value>
                <fullName>Entertainment ideas company Events</fullName>
            </value>
            <value>
                <fullName>Events Company - Can&apos;t help</fullName>
            </value>
            <value>
                <fullName>Free Platters</fullName>
            </value>
            <value>
                <fullName>Large conference or Gala dinner(hotel)</fullName>
            </value>
            <value>
                <fullName>Need Help again this year</fullName>
            </value>
            <value>
                <fullName>Offsite Trips outside Dublin</fullName>
            </value>
            <value>
                <fullName>Own Food or Drinks Get Rid</fullName>
            </value>
            <value>
                <fullName>Private Outside City Centre(North)</fullName>
            </value>
            <value>
                <fullName>Private Outside City Centre(South)</fullName>
            </value>
            <value>
                <fullName>Private Room -Older age group</fullName>
            </value>
            <value>
                <fullName>Quiz night Large</fullName>
            </value>
            <value>
                <fullName>Quiz night Small</fullName>
            </value>
            <value>
                <fullName>Restaurants cheaper</fullName>
            </value>
            <value>
                <fullName>Restaurants in bar venues</fullName>
            </value>
            <value>
                <fullName>Restaurants in Hotel venues</fullName>
            </value>
            <value>
                <fullName>Small conference or Dinner event (hotel)</fullName>
            </value>
            <value>
                <fullName>Summer 2020 with pricing</fullName>
            </value>
            <value>
                <fullName>Theatre venue with seating</fullName>
            </value>
            <value>
                <fullName>Unique party venue over 100</fullName>
            </value>
            <value>
                <fullName>Unique party venue under 100</fullName>
            </value>
            <value>
                <fullName>Unique small conference(Private Dining)</fullName>
            </value>
            <value>
                <fullName>Venues for speaker event with stage and screen</fullName>
            </value>
            <value>
                <fullName>venues with a stage for band nights</fullName>
            </value>
            <value>
                <fullName>Warehouse large Unique events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>