FindaVenue/force-app/main/default/objects/Lead/fields/Type_of_event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_event__c</fullName>
    <label>Type of event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>