FindaVenue/force-app/main/default/objects/Lead/fields/Type_of_venue_call_back__c.field-meta.xml
<CustomField>
    <fullName>Type_of_venue_call_back__c</fullName>
    <label>Type of venue /call back</label>
    <type>TextArea</type>
</CustomField>