FindaVenue/force-app/main/default/objects/Lead/fields/Venue1__c.field-meta.xml
<CustomField>
    <fullName>Venue1__c</fullName>
    <label>Venue1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>