FindaVenue/force-app/main/default/objects/Lead/fields/What_to_do_next_what_they_said_last__c.field-meta.xml
<CustomField>
    <fullName>What_to_do_next_what_they_said_last__c</fullName>
    <label>What to do next/what they said last</label>
    <length>255</length>
    <type>Text</type>
</CustomField>