FindaVenue/force-app/main/default/objects/Lead/fields/Winning_Venue__c.field-meta.xml
<CustomField>
    <fullName>Winning_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>